--- a/GrooveSharkClient/GrooveSharkClient.csproj
+++ b/GrooveSharkClient/GrooveSharkClient.csproj
@@ -79,14 +79,21 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IGrooveSharkClient.cs" />
     <Compile Include="GrooveSharkClient.cs" />
     <Compile Include="Helpers\HmacMd5.cs" />
     <Compile Include="Models\GrooveSharkResult.cs" />
+    <Compile Include="Models\Song.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="NetworkClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Contracts\ISessionService.cs" />
+    <Compile Include="Services\SessionService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Practices.Unity.WindowsPhone">
+      <HintPath>..\ext\Microsoft.Practicies.Unity\Microsoft.Practices.Unity.WindowsPhone.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.5\lib\portable-net45+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
     </Reference>
