--- a/GrooveSharkClient/GrooveSharkClient.csproj
+++ b/GrooveSharkClient/GrooveSharkClient.csproj
@@ -83,8 +83,8 @@
     <Compile Include="GrooveSharkClient.cs" />
     <Compile Include="Helpers\HmacMd5.cs" />
     <Compile Include="Models\GrooveSharkResult.cs" />
-    <Compile Include="Models\Song.cs" />
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\Entity\Song.cs" />
+    <Compile Include="Models\Entity\User.cs" />
     <Compile Include="NetworkClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Contracts\ISessionService.cs" />
