--- a/GrooveShark.WindowsPhone/GrooveSharkWindowsPhone.csproj
+++ b/GrooveShark.WindowsPhone/GrooveSharkWindowsPhone.csproj
@@ -156,6 +156,7 @@
   </PropertyGroup>
   <Import Project="..\GrooveSharkClientS\GrooveSharkClientS.projitems" Label="Shared" Condition="Exists('..\GrooveSharkClientS\GrooveSharkClientS.projitems')" />
   <Import Project="..\GrooveShark\GrooveSharkClientS.projitems" Label="Shared" Condition="Exists('..\GrooveShark\GrooveSharkClientS.projitems')" />
+  <Import Project="..\GrooveShark.Shared\GrooveSharkClientS.projitems" Label="Shared" Condition="Exists('..\GrooveShark.Shared\GrooveSharkClientS.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
