--- a/GrooveSharkWindows/GrooveSharkWindows.csproj
+++ b/GrooveSharkWindows/GrooveSharkWindows.csproj
@@ -136,6 +136,7 @@
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
   <Import Project="..\GrooveShark\GrooveSharkClientS.projitems" Label="Shared" Condition="Exists('..\GrooveShark\GrooveSharkClientS.projitems')" />
+  <Import Project="..\GrooveShark.Shared\GrooveSharkClientS.projitems" Label="Shared" Condition="Exists('..\GrooveShark.Shared\GrooveSharkClientS.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
