--- a/GrooveSharkClient/GrooveSharkClient.csproj
+++ b/GrooveSharkClient/GrooveSharkClient.csproj
@@ -79,15 +79,21 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Contracts\ICountryService.cs" />
     <Compile Include="Contracts\IGrooveSharkClient.cs" />
     <Compile Include="GrooveSharkClient.cs" />
     <Compile Include="Helpers\HmacMd5.cs" />
+    <Compile Include="Models\Entity\Album.cs" />
+    <Compile Include="Models\Entity\Artist.cs" />
+    <Compile Include="Models\Entity\CountryInfo.cs" />
+    <Compile Include="Models\Entity\Playlist.cs" />
     <Compile Include="Models\GrooveSharkResult.cs" />
     <Compile Include="Models\Entity\Song.cs" />
     <Compile Include="Models\Entity\User.cs" />
     <Compile Include="NetworkClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Contracts\ISessionService.cs" />
+    <Compile Include="Services\CountryService.cs" />
     <Compile Include="Services\SessionService.cs" />
   </ItemGroup>
   <ItemGroup>
