--- a/GrooveSharkWindowsPhone/GrooveSharkWindowsPhone.csproj
+++ b/GrooveSharkWindowsPhone/GrooveSharkWindowsPhone.csproj
@@ -90,22 +90,45 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="App\DI.cs" />
+    <Compile Include="Converters\BoolToVisibilityInvertConverter.cs" />
+    <Compile Include="Converters\NullOrEmptyToVisibilityConverter.cs" />
     <Compile Include="Helpers\AppSettings.cs" />
     <Compile Include="Helpers\NavigationHelper.cs" />
+    <Compile Include="Helpers\ObservableExt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserControls\UCError.xaml.cs">
-      <DependentUpon>UCError.xaml</DependentUpon>
+    <Compile Include="UserControls\UCFavorite.xaml.cs">
+      <DependentUpon>UCFavorite.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\UCPlaylist.xaml.cs">
+      <DependentUpon>UCPlaylist.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\UCSessionError.xaml.cs">
+      <DependentUpon>UCSessionError.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControls\UCSearch.xaml.cs">
       <DependentUpon>UCSearch.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\UCSong.xaml.cs">
+      <DependentUpon>UCSong.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\UCSongMinimized.xaml.cs">
+      <DependentUpon>UCSongMinimized.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\AccountViewModel.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\FavouritesViewModel.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
+    <Compile Include="ViewModels\LibraryViewModel.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
+    <Compile Include="ViewModels\PlaylistsViewModel.cs" />
+    <Compile Include="ViewModels\PlaylistViewModel.cs" />
     <Compile Include="ViewModels\PopularSongViewModel.cs" />
     <Compile Include="ViewModels\SearchViewModel.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="ViewModels\SongViewModel.cs" />
+    <Compile Include="Views\AccountView.xaml.cs">
+      <DependentUpon>AccountView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\BaseView.cs" />
     <Compile Include="Views\HomeView.xaml.cs">
       <DependentUpon>HomeView.xaml</DependentUpon>
@@ -143,6 +166,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Ressources\Converters.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Page>
     <Page Include="Ressources\DataTemplates.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -163,11 +191,31 @@
       <Generator>MSBuild:Compile</Generator>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Page>
-    <Page Include="UserControls\UCError.xaml">
+    <Page Include="UserControls\UCFavorite.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\UCPlaylist.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\UCSessionError.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\UCSearch.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\UCSong.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\UCSongMinimized.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AccountView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
