--- a/GrooveSharkClient/GrooveSharkClient.csproj
+++ b/GrooveSharkClient/GrooveSharkClient.csproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <Compile Include="Contracts\ICountryService.cs" />
     <Compile Include="Contracts\IGrooveSharkClient.cs" />
+    <Compile Include="Contracts\ILoadingService.cs" />
     <Compile Include="Contracts\IService.cs" />
     <Compile Include="Contracts\IUserService.cs" />
     <Compile Include="GrooveSharkClient.cs" />
@@ -97,6 +98,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Contracts\ISessionService.cs" />
     <Compile Include="Services\CountryService.cs" />
+    <Compile Include="Services\LoadingService.cs" />
     <Compile Include="Services\SessionService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
