--- a/GrooveSharkWindowsPhone/GrooveSharkWindowsPhone.csproj
+++ b/GrooveSharkWindowsPhone/GrooveSharkWindowsPhone.csproj
@@ -102,7 +102,6 @@
     <Compile Include="AudioPlayer\AudioPlayerService.cs" />
     <Compile Include="App\DI.cs" />
     <Compile Include="AudioPlayer\IAudioPlayerService.cs" />
-    <Compile Include="AudioPlayer\PlaylistManager.cs" />
     <Compile Include="Converters\BoolToVisibilityInvertConverter.cs" />
     <Compile Include="Converters\NullOrEmptyToVisibilityConverter.cs" />
     <Compile Include="Helpers\NavigationHelper.cs" />
@@ -266,6 +265,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\portable-net40+sl5+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="ReactiveUI">
       <HintPath>..\packages\reactiveui-core.6.2.0\lib\Portable-Win81+WPA81\ReactiveUI.dll</HintPath>
     </Reference>
