--- a/GrooveSharkWindowsPhone/packages.config
+++ b/GrooveSharkWindowsPhone/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="wpa81" />
   <package id="reactiveui" version="6.2.0" targetFramework="wpa81" />
   <package id="reactiveui-core" version="6.2.0" targetFramework="wpa81" />
   <package id="Rx-Core" version="2.2.5" targetFramework="wpa81" />
